--- a/.env
+++ b/.env
@@ -24,3 +24,11 @@ VERCEL_GIT_REPO_ID=""
 VERCEL_GIT_REPO_OWNER=""
 VERCEL_GIT_REPO_SLUG=""
 VERCEL_URL=""
+
+// Auth Providers
+NEXTAUTH_SECRET=7xIJgIxbNJf+IjhmHFtqaT1tZ0QkEjY4SMyevVqnx4E
+GITHUB_ID=2c108f9401514b4be859
+GITHUB_SECRET=ae4a6e526eb88719b498c8ee26a915dc3fc096cd
+EMAIL_SERVER=
+EMAIL_FROM=
+
